# Ai-Quizora

./: LICENSE  README.md  app.py  gemini_service.py  models.py  pyproject.toml  routes.py
instance/: quiz.db
static/css/: style.css
static/js/: quiz.js
templates/: 404.html  500.html  base.html  index.html  leaderboard.html  quiz.html  results.html
